--- a/Configuration/config.properties
+++ b/Configuration/config.properties
@@ -1,6 +1,6 @@
 baseURL = https://admin-demo.nopcommerce.com/
 username = admin@yourstore.com
-password = admin1212
+password = admin
 chromepath=./Drivers\\chromedriver.exe
 iepath=./Drivers\\IEDriverServer.exe
 firefoxpath=./Drivers\\geckodriver.exe
